API keys controller actions
Kill all javascript

Add page layout template

Update footer links

Add feedback page navigation

Build homepage

Add error handling in routes

Add api keys index

Rename specs

Add dashboard index page

fix syntax error

Add create new api key

Add buttons to create new api key

Add create, delete, revoke views

Add feedback navigation

HMRC-827: Adds workflows and infrastructure for the dev hub

This includes the relevant terraform and ECS service configuration

HMRC-827: Configure puma

HMRC-827: Removes unused workflow

HMRC-827: Fixes load balancer reference

HMRC-827: Adds missing libs Dockerfile

HMRC-827: Removes unused linter

HMRC-827: Fixes early secret dependency

HMRC-827: Adds healthcheckz

Bump nokogiri from 1.18.3 to 1.18.4

Bumps [nokogiri](https://github.com/sparklemotion/nokogiri) from 1.18.3 to 1.18.4.
- [Release notes](https://github.com/sparklemotion/nokogiri/releases)
- [Changelog](https://github.com/sparklemotion/nokogiri/blob/main/CHANGELOG.md)
- [Commits](https://github.com/sparklemotion/nokogiri/compare/v1.18.3...v1.18.4)

---
updated-dependencies:
- dependency-name: nokogiri
  dependency-type: indirect
...

Signed-off-by: dependabot[bot] <support@github.com>

HMRC-879: Adds refresh_data service and test

This will be responsible for finding and creating the relevant data that
we want to populate in postgres

HMRC-879: Configure permissions for refresh

HMRC-879: Make sure we migrate the tables

HMRC-879: Be more permissive with apigateway

The dev-hub will be primarily responsible for managing this gateway so
just be permissive

HMRC-879: Updates provider versions

HMRC-879: Stop manually deploying

HMRC-907: Replicate creating and associating an api key with a usage plan

I also behind the scenes populated some env vars for this

HMRC-907: Make the api key creation a bit more robust

HMRC-911: Adds revoke/delete services

HMRC-928: Adds localstack

- Populate seeds.rb
- Dynamically enable/hint at using localst

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,28 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html class="govuk-template app-html-class">
   <head>
-    <title><%= content_for(:title) || "Trade Tariff Dev Hub" %></title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title><%= content_for(:title) || "Commodity Code Identification Tool Developer Hub" %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
+    <meta charset="utf-8">
+    <meta name="theme-color" content="blue">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= yield :head %>
+    <%= favicon_link_tag 'favicon.ico' %>
+    <%= favicon_link_tag 'favicon.svg' %>
+    <%= favicon_link_tag 'govuk-icon-mask.svg', rel: 'mask-icon', type: 'image/svg', color: "#0b1c0c" %>
+    <%= favicon_link_tag 'govuk-icon-180.png', rel: 'apple-touch-icon', type: 'image/png', size: '180x180' %>
 
-    <%# Enable PWA manifest for installable apps (make sure to enable in config/routes.rb too!) %>
-    <%#= tag.link rel: "manifest", href: pwa_manifest_path(format: :json) %>
+    <%= stylesheet_link_tag "govuk-frontend.min", "data-turbo-track": "reload" %>
 
-    <link rel="icon" href="/icon.png" type="image/png">
-    <link rel="icon" href="/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/icon.png">
-
-    <%# Includes all stylesheet files in app/assets/stylesheets %>
-    <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <%= yield %>
+  <%= govuk_header(homepage_url: "https://www.gov.uk", service_name: "Commodity Code Identification Tool Developer Hub", service_url: "#") do |header|
+    header.with_navigation_item(text: "Dashboard", href: "/dashboard", active: false)
+    header.with_navigation_item(text: "Update Profile", href: "#", active: false)
+    header.with_navigation_item(text: "Manage Team", href: "#", active: false)
+    header.with_navigation_item(text: "Sign Out", href: "#", active: false)
+  end %>
+
+  <body class="govuk-template__body app-body-class">
+    <div class="govuk-width-container app-width-container">
+    <script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
+    <%= govuk_phase_banner(tag: { text: "Beta" }) do %>This is a new service, your
+      <%= govuk_link_to("feedback (opens in a new tab)", ENV["FEEDBACK_URL"] || 'https://www.trade-tariff.service.gov.uk/feedback', target: "_blank") %>
+      will help us improve it.
+    <% end %>
+    <main class="govuk-main-wrapper app-main-class" id="main-content">
+      <%= yield %>
+    </main>
+  </div>
   </body>
+
+  <%= govuk_footer(meta_items_title: "Helpful links", meta_items: {
+    "API Documentation" => "https://api.trade-tariff.service.gov.uk/fpo.html",
+    "Feedback" => ENV["FEEDBACK_URL"] || "https://trade-tariff.service.gov.uk/feedback",
+    "Privacy policy" => "https://hub.trade-tariff.service.gov.uk/privacyPolicy",
+    "Cookies" => "#",
+    "Terms and conditions" => "https://api.trade-tariff.service.gov.uk/fpo/terms-and-conditions.html",
+  }) %>
 </html>
