HMRC-829: Adds Government Gateway (SCP) integration
This adds the relevant middleware and configuration to integrate with
the Government Gateway service which is an externally hosted service
used to authenticate users.

We now implicitly create a user and an organisation and gives the
organisation a default status of unregistered.

--- a/app/views/api_keys/create.html.erb
+++ b/app/views/api_keys/create.html.erb
@@ -7,7 +7,7 @@
     <div class="govuk-inset-text">
       <strong>API Key</strong>
       <br>
-      <code class="govuk-code" id="api-key-id"><%= session[:api_key_id] %></code>
+      <code class="govuk-code" id="api-key-id"><%= @api_key.secret %></code>
     </div>
     <div>
       <button type="button" class="govuk-button govuk-button--secondary" data-module="govuk-button" id="copy-to-clipboard">
