--- a/app/views/api_keys/revoke.html.erb
+++ b/app/views/api_keys/revoke.html.erb
@@ -7,7 +7,7 @@
           table.with_body do |body|
             body.with_row do |row|
               row.with_cell(header: true, text: 'API Key')
-              row.with_cell(text: mask_api_key(@api_key.api_key_id))
+              row.with_cell(text: mask_api_key(@api_key))
             end
           end
 
