HMRC-877: Adds test coverage for models and helpers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,10 +43,10 @@
   </body>
 
   <%= govuk_footer(meta_items_title: "Helpful links", meta_items: {
-    "API Documentation" => documentation_url,
-    "Feedback" =>  feedback_url,
+    "API Documentation" => TradeTariffDevHub.documentation_url,
+    "Feedback" =>  TradeTariffDevHub.feedback_url,
     "Privacy policy" => "https://hub.trade-tariff.service.gov.uk/privacyPolicy",
     "Cookies" => "#",
-    "Terms and conditions" => terms_and_conditions_url,
+    "Terms and conditions" => TradeTariffDevHub.terms_and_conditions_url,
   }) %>
 </html>
