HMRC-877: Localise details form hints and labels

--- a/app/views/user_verification/steps/_review_answers.html.erb
+++ b/app/views/user_verification/steps/_review_answers.html.erb
@@ -50,7 +50,7 @@
       :id,
       :text,
       legend: { text: "Terms and conditions", tag: "h1", size: "l" },
-      hint: { text: fpo_usage_terms_hint }
+      hint: { text: user_verification_steps_review_answers_terms_hint }
     %>
     <p class="govuk-body">
       By submitting this application you are confirming that, to the best of your knowledge, the details you are providing are correct.
