HMRC-1034: Stop printing review answers

--- a/app/views/user_verification/steps/_review_answers.html.erb
+++ b/app/views/user_verification/steps/_review_answers.html.erb
@@ -2,7 +2,7 @@
 
 <h2 class="govuk-heading-m">Application details</h2>
 
-<%= answers = f.object.answers %>
+<%- answers = f.object.answers %>
 
 <%= govuk_summary_list do |summary_list|
   summary_list.with_row do |row|
