--- a/app/views/user_verification/steps/completed.html.erb
+++ b/app/views/user_verification/steps/completed.html.erb
@@ -1,7 +1,7 @@
 <%= govuk_panel(title_text: "Application complete") do %>
         Your reference number
         <br>
-        <strong><%= params[:application_reference] %></strong>
+        <strong><%= organisation.application_reference %></strong>
 <% end %>
 
 <p class="govuk-body">We have sent you a confirmation email.</p>
