HMRC-1035: Adds privacy and cookies pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,8 +45,8 @@
   <%= govuk_footer(meta_items_title: "Helpful links", meta_items: {
     "API Documentation" => TradeTariffDevHub.documentation_url,
     "Feedback" =>  TradeTariffDevHub.feedback_url,
-    "Privacy policy" => "https://hub.trade-tariff.service.gov.uk/privacyPolicy",
-    "Cookies" => "#",
+    "Privacy policy" => privacy_path,
+    "Cookies" => cookies_path,
     "Terms and conditions" => TradeTariffDevHub.terms_and_conditions_url,
   }) %>
 </html>
