HMRC-1047: Adds handling for non-organisation accounts

--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -2,12 +2,9 @@
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">Commodity Code Identification Tool Developer Hub</h1>
       <p class="govuk-body">This service allows you to create API keys to access the FPO Commodity Code Identification Tool API</p>
-      <div class="govuk-inset-text">
-        To use this service, your organisation must be UK Carrier Scheme (UKC) registered. You can
-        <a href="https://www.gov.uk/guidance/apply-for-the-uk-carrier-scheme" target="_blank">
-          apply for the UK Carrier scheme here (opens in new tab)
-        </a>.
-      </div>
+
+      <%= carrier_scheme_inset_text %>
+
       <p class="govuk-body">You can use this service to:</p>
       <ul class="govuk-list govuk-list--bullet">
           <li>create an API key for yourself</li>
