--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -16,37 +16,37 @@
 
 <p class="govuk-body">For use of the service:</p>
 
-<ul class="govuk-list govuk-list--bullet">
-  <li>The name and email address you used to sign up to Government Gateway</li>
-</ul>
+<%= govuk_list [
+  "The name and email address you used to sign up to Government Gateway",
+], type: :bullet %>
 
 <p class="govuk-body">To register for the FPO commodity code identification API:</p>
 
-<ul class="govuk-list govuk-list--bullet">
-  <li>Your organisation name</li>
-  <li>Your work email address</li>
-</ul>
+<%= govuk_list [
+  "Your organisation name",
+  "Your work email address",
+], type: :bullet %>
 
 <p class="govuk-body">For online and telephone support:</p>
 
-<ul class="govuk-list govuk-list--bullet">
-  <li>name</li>
-  <li>email address</li>
-  <li>telephone number</li>
-  <li>details of your support issue</li>
-</ul>
+<%= govuk_list [
+  "name",
+  "email address",
+  "telephone number",
+  "details of your support issue",
+], type: :bullet %>
 
 <h2 class="govuk-heading-m">Why we collect your personal data</h2>
 
 <p class="govuk-body">We collect your personal data to:</p>
 
-<ul class="govuk-list govuk-list--bullet">
-  <li>allow you to access the service securely</li>
-  <li>allow us to contact you regarding an application to access the FPO commodity code identification tool API</li>
-  <li>allow us to notify you about any siginificant changes to the service availability such as planned outages</li>
-  <li>gather feedback to improve the service</li>
-  <li>respond to any feedback you send us, if you have asked us to</li>
-</ul>
+<%= govuk_list [
+  "allow you to access the service securely",
+  "allow us to contact you regarding an application to access the FPO commodity code identification tool API",
+  "allow us to notify you about any siginificant changes to the service availability such as planned outages",
+  "gather feedback to improve the service",
+  "respond to any feedback you send us, if you have asked us to",
+], type: :bullet %>
 
 <h2 class="govuk-heading-m">The legal basis of using your data</h2>
 
@@ -96,20 +96,20 @@
 
 <p class="govuk-body">You have the right to request:</p>
 
-<ul class="govuk-list govuk-list--bullet">
-  <li>information about how your personal data is processed</li>
-  <li>a copy of that personal data</li>
-  <li>that anything inaccurate in your personal data is corrected immediately</li>
-</ul>
+<%= govuk_list [
+  "information about how your personal data is processed",
+  "a copy of that personal data",
+  "that anything inaccurate in your personal data is corrected immediately",
+], type: :bullet %>
 
 <p class="govuk-body">You can also:</p>
 
-<ul class="govuk-list govuk-list--bullet">
-  <li>raise an objection about how your personal data is processed</li>
-  <li>request that your personal data is erased if there is no longer a justification for it</li>
-  <li>ask that the processing of your personal data is restricted in certain circumstances</li>
-  <li>If you have any of these requests, get in contact with our Privacy Team.</li>
-</ul>
+<%= govuk_list [
+  "raise an objection about how your personal data is processed",
+  "request that your personal data is erased if there is no longer a justification for it",
+  "ask that the processing of your personal data is restricted in certain circumstances",
+  "If you have any of these requests, get in contact with our Privacy Team.",
+], type: :bullet %>
 
 <h2 class="govuk-heading-m">International transfers</h2>
 
