HMRC-1166: Support server side sessions for logout

--- a/app/views/user_verification/steps/_form.html.erb
+++ b/app/views/user_verification/steps/_form.html.erb
@@ -1,4 +1,4 @@
-<% unless organisation_account? %>
+<% unless user_session.organisation_account? %>
     <%= govuk_notification_banner(title_text: "It looks like you're using a personal Government Gateway account")  do %>
         <p class="govuk-body">
             If you register using this account you won't be able to invite other users to manage the API keys for this organisation.
