PRDEX-162: Configure passwordless flow with placeholder authenticated endpoint

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="govuk-template app-html-class">
   <head>
-    <title><%= content_for(:title) || "Commodity Code Identification Tool Developer Hub" %></title>
+    <title><%= content_for(:title) || "UK Trade Tariff Developer Portal" %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
@@ -20,7 +20,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <%= govuk_header(homepage_url: ENV.fetch("GOVUK_APP_DOMAIN", "http://localhost:3000"), service_name: "Commodity Code Identification Tool Developer Hub", service_url: "#") do |header|
+  <%= govuk_header(homepage_url: ENV.fetch("GOVUK_APP_DOMAIN", "http://localhost:3000"), service_name: "UK Trade Tariff Developer Portal", service_url: "#") do |header|
     if respond_to?(:current_user) && current_user.present?
       header.with_navigation_item(text: "Dashboard", href: api_keys_path, active: true)
       header.with_navigation_item(text: "Update Profile", href: update_profile_url, active: false)
