--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -1,6 +1,6 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">Commodity Code Identification Tool Developer Hub</h1>
+      <h1 class="govuk-heading-xl">UK Trade Tariff Developer Portal</h1>
       <p class="govuk-body">This service allows you to create API keys to access the FPO Commodity Code Identification Tool API</p>
 
       <%= carrier_scheme_inset_text %>
