PRDEX-162: Small routing adjustments to match new UI

--- a/app/views/api_keys/create.html.erb
+++ b/app/views/api_keys/create.html.erb
@@ -14,7 +14,7 @@
         Copy to clipboard
       </button>
       <p class="govuk-body">
-        <%= govuk_link_to 'Back to dashboard', '/dashboard', class: 'govuk-link' %>
+        <%= govuk_link_to 'Back to api keys', api_keys_path, class: 'govuk-link' %>
       </p>
     </div>
   </div>
