--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -25,11 +25,11 @@
         "an email address for essential updates",
       ], type: :bullet %>
 
-      <%= govuk_start_button(text: "Start now", href: "/dashboard") %>
+      <%= govuk_start_button(text: "Start now", href: api_keys_path) %>
 
       <h2 class="govuk-heading-m">If you need help</h2>
       <p class="govuk-body">
-          If you have any further queries relating to the developer hub contact: <%= govuk_link_to "hmrc-trade-tariff-support-g@digital.hmrc.gov.uk", "mailto:hmrc-trade-tariff-support-g@digital.hmrc.gov.uk" %>
+          If you have any further queries relating to the developer portal contact: <%= govuk_link_to "hmrc-trade-tariff-support-g@digital.hmrc.gov.uk", "mailto:hmrc-trade-tariff-support-g@digital.hmrc.gov.uk" %>
       </p>
     </div>
 </div>
