--- a/app/views/pages/cookies.html.erb
+++ b/app/views/pages/cookies.html.erb
@@ -1,4 +1,4 @@
-<h1 class="govuk-heading-xl">Cookies on the Commodity Code Identification Tool Developer Hub</h1>
+<h1 class="govuk-heading-xl">Cookies on the Commodity Code Identification Tool Developer Portal</h1>
 <p class="govuk-body">Cookies are files saved on your phone, tablet or computer when you visit a website. We use cookies to store information about how you use this website, such as the pages you visit.</p>
 
 <h2 class="govuk-heading-m">Strictly necessary cookies</h2>
