--- a/app/views/users/placeholder.html.erb
+++ b/app/views/users/placeholder.html.erb
@@ -1,4 +1,4 @@
-<%= govuk_back_link(text: "Back to dashboard", href: root_path) %>
+<%= govuk_back_link(text: "Back to api keys", href: root_path) %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
