--- a/app/views/api_keys/revoke.html.erb
+++ b/app/views/api_keys/revoke.html.erb
@@ -24,8 +24,8 @@
         end
     %>
     <div class="govuk-button-group">
-      <%= govuk_button_to 'Revoke', api_keys_revoke_path, method: :patch, class: 'govuk-button govuk-button--warning' %>
-      <%= govuk_link_to 'Cancel', '/dashboard', class: 'govuk-link' %>
+      <%= govuk_button_to 'Revoke', revoke_api_key_path, method: :patch, class: 'govuk-button govuk-button--warning' %>
+      <%= govuk_link_to 'Cancel', api_keys_path, class: 'govuk-link' %>
     </div>
   </div>
 </div>
