--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -1,7 +1,7 @@
 <h1 class="govuk-heading-xl">Privacy notice</h1>
 
 <p class="govuk-body">
-  Commodity Code Identification Tool Developer Hub (the ‘service’) is provided by HM Revenue and Customs (HMRC). HMRC will be referred to as ‘we’ or ‘us’ throughout this notice.
+  Commodity Code Identification Tool Developer Portal (the ‘service’) is provided by HM Revenue and Customs (HMRC). HMRC will be referred to as ‘we’ or ‘us’ throughout this notice.
 </p>
 
 <p class="govuk-body">We are committed to protecting the privacy and security of your personal information.</p>
@@ -52,7 +52,7 @@
 
 <p class="govuk-body">In order for the use of personal data to be lawful, we need to meet one (or more) conditions in the data protection legislation, as set out in Article 6(1) of the General Data Protection Regulation (GDPR).</p>
 
-<p class="govuk-body">For the purpose of providing the Commodity Code Identification Tool Developer Hub, the relevant condition that we are meeting is ‘public task’ as specified under Article 6 (1)(e) of the GDPR.</p>
+<p class="govuk-body">For the purpose of providing the Commodity Code Identification Tool Developer Portal, the relevant condition that we are meeting is ‘public task’ as specified under Article 6 (1)(e) of the GDPR.</p>
 
 <h2 class="govuk-heading-m">Who we share your data with</h2>
 
