--- a/app/views/user_verification/steps/_details.html.erb
+++ b/app/views/user_verification/steps/_details.html.erb
@@ -16,5 +16,5 @@ Enter the following information about your organisation. This will be used to ve
 <h2 class="govuk-heading-m">If you need help</h2>
 
 <p class="govuk-body">
-    If you have any further queries relating to the developer hub contact: <%= govuk_link_to "hmrc-trade-tariff-support-g@digital.hmrc.gov.uk", "mailto:hmrc-trade-tariff-support-g@digital.hmrc.gov.uk" %>
+    If you have any further queries relating to the developer portal contact: <%= govuk_link_to "hmrc-trade-tariff-support-g@digital.hmrc.gov.uk", "mailto:hmrc-trade-tariff-support-g@digital.hmrc.gov.uk" %>
 </p>
