--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -1,35 +1,31 @@
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">UK Trade Tariff Developer Portal</h1>
-      <p class="govuk-body">This service allows you to create API keys to access the FPO Commodity Code Identification Tool API</p>
+  <div class="govuk-grid-column-two-thirds">
+    <h1 class="govuk-heading-l">Sign in/Sign up to the developer portal</h1>
 
-      <%= carrier_scheme_inset_text %>
+    <p class="govuk-body">
+      The UK Trade Tariff Developer Portal allows you too:
+    </p>
 
-      <p class="govuk-body">You can use this service to:</p>
-      <%= govuk_list [
-        "create an API key for yourself",
-        "create an API key for someone else in your organisation",
-        "revoke an API key",
-        "view active API keys",
-      ], type: :bullet %>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>Manage Fast Parcel Operator API keys to perform bulk classification of goods</li>
+      <li>Manage UK Trade Tariff API oauth credentials to call various APIs to surface trade-related data</li>
+    </ul>
 
-      <p class="govuk-body">
-          You'll need a Government Gateway account to use this service. If you do not have a Government Gateway account, you can create one.
-      </p>
+    <p class="govuk-body">
+      This service is for developers who need to access the UK Trade Tariff APIs. If you are not a developer, you do not need to sign up for this service.
+    </p>
 
-      <p class="govuk-body">If it is your first time registering, you'll also need:</p>
-      <%= govuk_list [
-        "the name of your organisation",
-        "the EORI number of your organisation",
-        "the UK Authorised Carrier Scheme reference number of your organisation",
-        "an email address for essential updates",
-      ], type: :bullet %>
+    <p class="govuk-body"><strong>What you need to do:</strong></p>
 
-      <%= govuk_start_button(text: "Start now", href: api_keys_path) %>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>Enter your email address</li>
+      <li>Verify your email address</li>
+      <li>Configure your credentials</li>
+    </ul>
 
-      <h2 class="govuk-heading-m">If you need help</h2>
-      <p class="govuk-body">
-          If you have any further queries relating to the developer portal contact: <%= govuk_link_to "hmrc-trade-tariff-support-g@digital.hmrc.gov.uk", "mailto:hmrc-trade-tariff-support-g@digital.hmrc.gov.uk" %>
-      </p>
-    </div>
+    <a href=<%= api_keys_path %> role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+      Start now
+      <%= render 'shared/start_arrow' %>
+    </a>
+  </div>
 </div>
