--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -1,31 +1,80 @@
 <div class="govuk-grid-row">
+  <%= govuk_notification_banner(title_text: "Important") do |nb| %>
+    <%- nb.with_heading(text: "Developer Portal has moved to passwordless sign-in.") %>
+    <p>You can now access this service using a secure one-time link sent to your email—no password required.</p>
+    <p>It's faster and easier to use.</p>
+  <% end %>
+
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-l">Sign in/Sign up to the developer portal</h1>
+    <h1 class="govuk-heading-l">UK Trade Tariff Developer Portal</h1>
 
     <p class="govuk-body">
-      The UK Trade Tariff Developer Portal allows you too:
+      Welcome to the official GOV.UK Developer Portal for HMRC Trade Tariff APIs.
     </p>
-
-    <ul class="govuk-list govuk-list--bullet">
-      <li>Manage Fast Parcel Operator API keys to perform bulk classification of goods</li>
-      <li>Manage UK Trade Tariff API oauth credentials to call various APIs to surface trade-related data</li>
-    </ul>
 
     <p class="govuk-body">
-      This service is for developers who need to access the UK Trade Tariff APIs. If you are not a developer, you do not need to sign up for this service.
+      This is your central entry point for exploring, testing, and integrating UK tariff data directly from HMRC.
     </p>
 
-    <p class="govuk-body"><strong>What you need to do:</strong></p>
+    <h3 class="govuk-heading-m">What you can do</h3>
 
-    <ul class="govuk-list govuk-list--bullet">
-      <li>Enter your email address</li>
-      <li>Verify your email address</li>
-      <li>Configure your credentials</li>
-    </ul>
+    <p class="govuk-body">
+      The Trade Tariff APIs provide structured, reliable access to official tariff information — including commodity codes, duty rates, VAT, quotas, and trade measures.
+    </p>
 
-    <a href=<%= api_keys_path %> role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
-      Start now
-      <%= render 'shared/start_arrow' %>
-    </a>
+    <p class="govuk-body">
+      They are designed to support developers, product managers, and compliance specialists building tools and services around UK trade.
+    </p>
+
+    <h3 class="govuk-heading-m">Available APIs</h3>
+
+    <%= govuk_list type: :bullet  do %>
+      <%= tag.li do %>
+        <%= tag.strong("Categorisation API") %> – Check whether goods qualify for simplified (Green Lane) or standard (Red Lane) processes under the Windsor Framework.
+      <% end %>
+      <%= tag.li do %>
+        <%= tag.strong("Commodity Code API") %> – Retrieve detailed information on commodity codes, including duties, VAT, and restrictions.
+      <% end %>
+      <%= tag.li do %>
+        <%= tag.strong("Fast Parcel Operator (FPO) API") %> – Identify likely commodity codes from product descriptions to support rapid customs processing.
+      <% end %>
+    <% end %>
+
+    <h3 class="govuk-heading-m">Who this service is for</h3>
+    <p class="govuk-body">
+      Anyone who needs access to UK Trade Tariff data — including:
+    </p>
+
+    <%= govuk_list [
+      "Software developers building customs or logistics integrations.",
+      "Product managers overseeing compliance systems.",
+      "Trade and customs specialists seeking accurate, up-to-date information.",
+      ], type: :bullet
+    %>
+
+    <p class="govuk-body">
+      Whether you are a large enterprise or an independent trader, the APIs
+      provide consistent and authoritative data from HMRC’s Online Trade Tariff.
+    </p>
+
+    <h3 class="govuk-heading-m">Get started</h3>
+
+    <p class="govuk-body">
+      Create an account to generate, view and manage your API keys. Once signed in, you can:
+    </p>
+
+    <%= govuk_list [
+      "Test APIs in a secure sandbox environment",
+      "View interactive documentation and changelogs",
+      "Manage credentials and rate limits",
+      "Update your user profile and organisation details",
+      "Invite colleagues to join your organisation for shared access and
+management",
+      ], type: :bullet
+    %>
+
+    <p class="govuk-body">Registration is free and ensures you receive higher limits, proactive updates, and a smoother developer experience.</p>
+
+    <%= govuk_start_button(text: "Start now", href: api_keys_path) %>
   </div>
 </div>
