--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,9 @@
 
   <%= govuk_header(homepage_url: ENV.fetch("GOVUK_APP_DOMAIN", "http://localhost:3000"), service_name: "UK Trade Tariff Developer Portal", service_url: "#") do |header|
     if respond_to?(:current_user) && current_user.present?
-      header.with_navigation_item(text: "FPO Keys", href: api_keys_path, active: true)
-      header.with_navigation_item(text: "Sign Out", href: logout_path, active: false)
+      navigation_item_for(header, "FPO Keys", api_keys_path)
+      navigation_item_for(header, "Manage organisation", organisation_path(current_user.organisation))
+      navigation_item_for(header, "Sign Out", logout_path)
     end
   end %>
 
