--- a/app/views/api_keys/revoke.html.erb
+++ b/app/views/api_keys/revoke.html.erb
@@ -18,7 +18,7 @@
             end
             body.with_row do |row|
               row.with_cell(header: true, text: 'Created on')
-              row.with_cell(text: creation_date(@api_key))
+              row.with_cell(text: created_on(@api_key))
             end
           end
         end
