--- a/app/views/invitations/revoke.html.erb
+++ b/app/views/invitations/revoke.html.erb
@@ -2,7 +2,7 @@
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">Revoke invitation</h1>
     <p class="govuk-body">Check the below details regarding the invitation you have selected to revoke and confirm your choice.</p>
-    <%= govuk_warning_text(text: "Your invitation will be revoked and if the user tries to sign up against your organisation they will no longer be able too.") %>
+    <%= govuk_warning_text(text: "Your invitation will be revoked and if the user tries to sign up against your organisation they will no longer be able to.") %>
     <%= govuk_table do |table|
           table.with_body do |body|
             body.with_row do |row|
@@ -17,7 +17,7 @@
         end
     %>
     <div class="govuk-button-group">
-      <%= govuk_button_to 'Revoke', invitation_path(@invitation), method: :delete, warning: true %>
+      <%= govuk_button_to 'Revoke', invitation_path(@invitation), method: :patch, warning: true %>
       <%= govuk_link_to 'Cancel', organisation_path(organisation.id) %>
     </div>
   </div>
