--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,14 @@
 
   <%= govuk_header(homepage_url: ENV.fetch("GOVUK_APP_DOMAIN", "http://localhost:3000"), service_name: "UK Trade Tariff Developer Portal", service_url: "#") do |header|
     if respond_to?(:current_user) && current_user.present?
-      navigation_item_for(header, "FPO Keys", api_keys_path)
-      navigation_item_for(header, "Manage organisation", organisation_path(current_user.organisation))
-      navigation_item_for(header, "Sign Out", logout_path)
+      if organisation&.fpo_access?
+        header.with_navigation_item(text: "FPO Keys", href: api_keys_path, active: current_page?(api_keys_path))
+      end
+      if organisation&.ott_access?
+        header.with_navigation_item(text: "OTT Keys", href: ott_keys_path, active: current_page?(ott_keys_path))
+      end
+      header.with_navigation_item(text: "Manage organisation", href: organisation_path(current_user.organisation), active: false)
+      header.with_navigation_item(text: "Sign Out", href: logout_path, active: false)
     end
   end %>
 
