PRDEX-162: Updates govuk-frontend

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html class="govuk-template app-html-class">
+<html class="govuk-template--rebranded app-html-class">
   <head>
     <title><%= content_for(:title) || "UK Trade Tariff Developer Portal" %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <meta charset="utf-8">
-    <meta name="theme-color" content="blue">
+    <meta name="theme-color" content="#1d70b8">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
