--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,6 +5,7 @@
 
   <% if is_admin %>
     <%= header.with_navigation_item(text: "All Organisations", href: admin_organisations_path, active: current_page?(admin_organisations_path)) %>
+    <%= header.with_navigation_item(text: "Access Requests", href: admin_role_requests_path, active: current_page?(admin_role_requests_path)) %>
   <% end %>
 
   <%# Service role navigation (visible to admins AND users with those roles) %>
