--- a/app/views/role_requests/new.html.erb
+++ b/app/views/role_requests/new.html.erb
@@ -1,7 +1,7 @@
 <%= govuk_form_for @role_request do |f| %>
   <h1 class="govuk-heading-l">Request access</h1>
 
-  <p class="govuk-body">Select a role you would like to request access to for your organisation.</p>
+  <p class="govuk-body">Select a role you would like to request access to for your organisation. This request will be reviewed by HMRC and you will be notified.</p>
 
   <div class="govuk-form-group">
     <%= f.govuk_label :role_name, text: "Role" %>
