--- a/app/views/trade_tariff_keys/index.html.erb
+++ b/app/views/trade_tariff_keys/index.html.erb
@@ -1,5 +1,5 @@
-<h1 class="govuk-heading-l">Your Trade Tariff API keys</h1>
-<p class="govuk-body">Manage all Trade Tariff API keys that have been generated for your organisation.</p>
+<h1 class="govuk-heading-l">Trade Tariff keys</h1>
+<p class="govuk-body">Manage your Trade Tariff API keys that have been generated for your organisation.</p>
 
 <%= govuk_table do |table|
   table.with_head do |head|
