--- a/app/views/admin/organisations/index.html.erb
+++ b/app/views/admin/organisations/index.html.erb
@@ -1,7 +1,7 @@
 <div class="govuk-width-container">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-      <h1 class="govuk-heading-l">Organisations</h1>
+      <h1 class="govuk-heading-l">All organisations</h1>
 
       <%= govuk_table do |table|
         table.with_head do |head|
