--- a/app/views/api_keys/index.html.erb
+++ b/app/views/api_keys/index.html.erb
@@ -1,5 +1,5 @@
-<h1 class="govuk-heading-l">Your API keys</h1>
-<p class="govuk-body">Manage all API keys that have been generated for your organisation.</p>
+<h1 class="govuk-heading-l">FPO keys</h1>
+<p class="govuk-body">Manage your FPO API keys that have been generated for your organisation.</p>
 
 <%= govuk_table do |table|
   table.with_head do |head|
