--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,6 +3,8 @@
   <% is_admin = current_user&.organisation&.admin? %>
   <% viewed_org = organisation %>
 
+  <%= header.with_navigation_item(text: "Your organisation account", href: organisation_path(current_user.organisation)) %>
+
   <% if is_admin %>
     <%= header.with_navigation_item(text: "All Organisations", href: admin_organisations_path, active: current_page?(admin_organisations_path)) %>
     <%= header.with_navigation_item(text: "Access Requests", href: admin_role_requests_path, active: current_page?(admin_role_requests_path)) %>
@@ -19,6 +21,5 @@
   <% end %>
 
   <%# Common navigation (everyone sees these) %>
-  <%= header.with_navigation_item(text: "Manage organisation", href: organisation_path(current_user.organisation)) %>
   <%= header.with_navigation_item(text: "Sign Out", href: logout_path, active: false) %>
 <% end %>
