OTTIMP-323: Replace contact email with enquiry form link in help sections

--- a/app/views/organisations/show.html.erb
+++ b/app/views/organisations/show.html.erb
@@ -114,3 +114,6 @@
 <% end %>
 
 <%= govuk_button_link_to 'Invite new member', new_invitation_path %>
+
+<h2 class="govuk-heading-m">If you need help</h2>
+<p class="govuk-body">If you have any further queries relating to the developer portal, <%= govuk_link_to 'use the enquiry form', 'https://www.trade-tariff.service.gov.uk/enquiry_form', target: '_blank' %>.</p>
