--- a/app/views/trade_tariff_keys/index.html.erb
+++ b/app/views/trade_tariff_keys/index.html.erb
@@ -38,6 +38,4 @@ end %>
 <%= govuk_button_link_to('Create new Trade Tariff key', new_trade_tariff_key_path, secondary: true) %>
 
 <h2 class="govuk-heading-m">If you need help</h2>
-<p class="govuk-body">If you have any further queries relating to the developer portal contact:
-  <%= mail_to 'hmrc-trade-tariff-support-g@digital.hmrc.gov.uk', 'hmrc-trade-tariff-support-g@digital.hmrc.gov.uk', class: 'govuk-link' %>.
-</p>
+<p class="govuk-body">If you have any further queries relating to the developer portal, <%= govuk_link_to 'use the enquiry form', 'https://www.trade-tariff.service.gov.uk/enquiry_form', target: '_blank' %>.</p>
